--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "stage": "react-static build --staging",
     "build": "react-static build",
     "analyze": "react-static build --analyze",
-    "serve": "serve dist -p 3000"
+    "serve": "serve dist -p 3000",
+    "deploy:GH_PAGES": "react-static build && touch dist/.nojekyll && touch dist/CNAME && echo \"gruporottis.com\" >> dist/CNAME && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@reach/router": "^1.3.4",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-hot-loader": "^4.13.0",
